option('arduino_version', type : 'integer', value : 10808,
       description : 'Arduino IDE version. Used by some libraries.')

option('cpu_frequency', type : 'combo', choices : ['24', '48', '72', '96'],
       value : '48', description : 'CPU frequency in MHz.')

option('keyboard_layout', type : 'combo', choices : [#From keylayouts.h
                                                     'Canadian_French',
                                                     'Canadian_multilingual',
                                                     'Czech',
                                                     'Danish',
                                                     'Finnish',
                                                     'French',
                                                     'French_Belgian',
                                                     'French_Swiss',
                                                     'German',
                                                     'German_Mac',
                                                     'German_Swiss',
                                                     'Icelandic',
                                                     'Irish',
                                                     'Italian',
                                                     'Norwegian',
                                                     'Portuguese',
                                                     'Portuguese_Brazilian',
                                                     'Serbian_latin_only',
                                                     'Spanish',
                                                     'Spanish_Latin_America',
                                                     'Swedish',
                                                     'Turkish',
                                                     'US_English',
                                                     'US_international',
                                                     'United_Kingdom'],
       value : 'Swedish', description : 'Keyboard layout for HID projects.')

option('teensy_loader_path', type : 'string', value : '/opt',
       description : 'Path to teensy_loader_cli executable.')

option('teensyduino_version', type : 'integer', value : 145,
       description : 'Teensyduino version. Used by some libraries.')

option('usb_mode', type : 'combo', choices : [#From usb_desc.h
                                              'audio',
                                              'everything',
                                              'flightsim',
                                              'flightsim_joystick',
                                              'hid',
                                              'hid_touchscreen',
                                              'keyboardonly',
                                              'midi',
                                              'midi_serial',
                                              'midi_audio_serial',
                                              'midi4',
                                              'midi4_serial',
                                              'midi16',
                                              'midi16_serial',
                                              'midi16_audio_serial',
                                              'mtpdisk',
                                              'rawhid',
                                              'serial',
                                              'serial_hid',
                                              'touchscreen'],
       value : 'serial', description : 'USB operation mode.')

option('variant', type : 'combo', choices : ['3.0', '3.2', '3.5', '3.6', 'LC'],
       value : '3.2', description : 'Teensy board variant. For 3.1 boards, select 3.2.')
